[project]
name = "rouver"
version = "2.7.0.dev0"
description = "A microframework"
readme = "README.md"
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = [
    "dectest >= 1.0.0, < 2",
    "werkzeug >= 2.0, < 4",
    "typing-extensions >= 4.1.1, < 5",
]

[dependency-groups]
dev = [
    "asserts >= 0.10.0, < 0.13",
    "black >= 23.1.0, < 24",
    "flake8 >= 6.0.0, < 7",
    "isort >= 5.11.4, < 6",
    "mypy ~= 1.5.0",
    "pytest >= 6.2.5, < 8",
]

[project.urls]
Homepage = "https://github.com/srittau/rouver"
Repository = "https://github.com/srittau/rouver"
GitHub = "https://github.com/srittau/rouver"
"Bug Tracker" = "https://github.com/srittau/rouver/issues"
Changes = "https://github.com/srittau/rouver/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{ include = "rouver" }, { include = "rouver_test" }]
include = ["*/py.typed"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
line_length = 79
known_zctest = "test_zcapi,test_zcbase,test_zcevents"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,ZCTEST"

[tool.pytest.ini_options]
python_files = "rouver_test/**.py"
python_functions = "test_*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
