[project]
name = "rouver"
version = "2.7.1-dev"
description = "A microframework"
readme = "README.md"
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = ["dectest >= 1.0.0, < 2", "werkzeug >= 2, < 4"]

[dependency-groups]
dev = ["mypy ~= 1.19.0", "pytest", "ruff ~= 0.15.8", "werkzeug >= 3.1.7, < 4"]

[project.urls]
Homepage = "https://github.com/srittau/rouver"
Repository = "https://github.com/srittau/rouver"
GitHub = "https://github.com/srittau/rouver"
"Bug Tracker" = "https://github.com/srittau/rouver/issues"
Changes = "https://github.com/srittau/rouver/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
module-root = ""
module-name = ["rouver", "rouver_test"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_equality_for_none = true
strict_bytes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
python_files = "rouver_test/**.py"
python_functions = "test_*"

[build-system]
requires = ["uv_build >= 0.11.2, < 0.12"]
build-backend = "uv_build"
