[metadata]
name = rouver
version = 2.4.0
description = A microframework
long_description = file: README.md
long_description_content_type = "text/markdown"
license = MIT
author = Sebastian Rittau"
author_email = srittau@rittau.biz
url = https://github.com/srittau/rouver
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
packages = 
    rouver
    rouver_test
python_version = >=3.7
install_requires =
    dectest>=1.0.0,<2
    werkzeug>=0.16.0,<3

[options.extras_require]
tests =
    asserts>=0.10.0,<0.12

[options.package_data]
rouver = py.typed

[flake8]
# E203: whitespace before ':': black compatibility
# W503: line break before binary operator: black compatibility
ignore = E203,W503
